--- a/angular-menu/index.html
+++ b/angular-menu/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>AngularMenu</title>
-  <base href="/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  rel="stylesheet">
 <link rel="stylesheet" href="styles.d2d820f45af6417f08cb.css"></head>
